--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "build-win": "pkg index.js --target node18-win-x64  --out-path ./build --public --debug  --config ./package.json",
-    "release": "powershell -ExecutionPolicy Bypass -File .\\create-release.ps1",
+    "release-win": "powershell -ExecutionPolicy Bypass -File .\\copy-files.ps1 && powershell -ExecutionPolicy Bypass -File .\\unzip.ps1 && powershell -ExecutionPolicy Bypass -File .\\create-release.ps1",
     "updatex": "npm version patch",
     "updatexx": "npm version minor",
     "updatexxx": "npm version major"
