--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "build-win": "pkg index.js --target node18-win-x64  --out-path ./build --public --debug  --config ./package.json",
+    "build-win": "pkg index.js --target node18-win-x64  --out-path ./build --public  --config ./package.json",
     "release-win": "powershell -ExecutionPolicy Bypass -File .\\copy-files.ps1 && powershell -ExecutionPolicy Bypass -File .\\unzip.ps1 && powershell -ExecutionPolicy Bypass -File .\\create-release.ps1",
     "updatex": "npm version patch",
     "updatexx": "npm version minor",
